--- a/package.json
+++ b/package.json
@@ -59,10 +59,10 @@
     "postinstall": "node scripts/chmod.js"
   },
   "devDependencies": {
-    "@capacitor/android": "^6.2.0",
-    "@capacitor/core": "^6.2.0",
+    "@capacitor/android": "^7.4.3",
+    "@capacitor/core": "^7.4.3",
     "@capacitor/docgen": "^0.3.0",
-    "@capacitor/ios": "^6.2.0",
+    "@capacitor/ios": "^7.4.3",
     "@ionic/eslint-config": "^0.4.0",
     "@ionic/prettier-config": "^4.0.0",
     "@ionic/swiftlint-config": "^2.0.0",
@@ -77,7 +77,7 @@
     "yargs": "^17.7.2"
   },
   "peerDependencies": {
-    "@capacitor/core": "^6.2.0"
+    "@capacitor/core": "^7.4.3"
   },
   "prettier": "@ionic/prettier-config",
   "swiftlint": "@ionic/swiftlint-config",
@@ -95,5 +95,8 @@
   "bin": {
     "ssl-fingerprint": "dist/cli/fingerprint.js",
     "capacitor-ssl-fingerprint": "dist/cli/fingerprint.js"
+  },
+  "dependencies": {
+    "@capacitor/cli": "^7.4.3"
   }
 }
